src/objects/PurgeSobjectSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting controls which entities to be purged and the history of records to be saved while purging.</description>
    <fields>
        <fullName>Enable_Purge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked only then the corresponding entry will be picked for Purging.</description>
        <label>Enable Purge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Save_History__c</fullName>
        <description>Number of days of data to be saved when the purge batch runs. If set to 10, last 10 days of data will be saved and rest deleted. If set to 0, all data will be deleted.</description>
        <label>Save_History</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Where_Clause__c</fullName>
        <description>Provides optional where clause for building the SOQL to fetch qualified records for purging.</description>
        <label>Where_Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <label>order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>PurgeSobjectSettings</label>
</CustomObject>